--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -3,13 +3,54 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- אייקון האתר (favicon) -->
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <!-- תיאור האתר לנגישות -->
-  <meta name="description" content="מערכת ניהול כרטיסי ביקור דיגיטליים לעסקים ולקוחות" />
-  <!-- כותרת האתר בעברית -->
-  <title>מערכת ניהול כרטיסי ביקור דיגיטליים</title>
+
+  <!-- PWA Meta Tags -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#667eea" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="BizIdentity" />
+  <meta name="msapplication-TileColor" content="#667eea" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
+
+  <!-- SEO Meta Tags -->
+  <title>BizIdentity - Professional Business Cards</title>
+  <meta name="description"
+    content="Create beautiful, professional business cards online. Easy to use, customizable templates, and instant sharing." />
+  <meta name="keywords" content="business cards, digital cards, professional cards, networking, contact cards" />
+  <meta name="author" content="BizIdentity" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://bizidentity.com" />
+  <meta property="og:title" content="BizIdentity - Professional Business Cards" />
+  <meta property="og:description"
+    content="Create beautiful, professional business cards online. Easy to use, customizable templates, and instant sharing." />
+  <meta property="og:image" content="/images/og-image.jpg" />
+  <meta property="og:site_name" content="BizIdentity" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://bizidentity.com" />
+  <meta property="twitter:title" content="BizIdentity - Professional Business Cards" />
+  <meta property="twitter:description"
+    content="Create beautiful, professional business cards online. Easy to use, customizable templates, and instant sharing." />
+  <meta property="twitter:image" content="/images/og-image.jpg" />
+
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://bizidentity.com" />
 </head>
 
 <body>
